Rettelse af kravene til systemet

--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -6,6 +6,6 @@ I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues b
 luften. For at udvikle et sådant system skal en passende regulator designes og denne skal implementeres
 på en mikrocontroller. 
 Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
-Projektet udføres i overensstemmelse med projektoplægget som er vedlagt 
+Projektet udføres i overensstemmelse med det tilhørende projektoplæg, som er vedlagt 
 som bilag.
 \todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning.}
