--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -47,47 +47,52 @@ Punktet D er "high house" (affyringsstedet).
 }
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
 \end{figure}
+Tilt-rammen kan bevæge sig frit,
+men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 
 Haglene fra et 12 gauge haglgevær med Skeet Choke spredes så de dækker et område
 med en diameter på 1,32 [m] på en afstand på 37 [m] \citep[Pattern and choke]{patternandchoke}.
 Spredningsvinklen er, med en antagelse om lineær spredning, givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
+\begin{split}
   Spredning &= \tan \left(\frac{1,32}{2} / 37 \right) \\
   &= 2,04 \degree
+  \end{split}
   \label{eq:ks:spredning}
 \end{align}
 %Der er altså et krav om at geværet peger på lerduen med en præcision på \(\pm 1,02 \degree\).
-Når trackingfejlen defineres som i ligning \ref{eq:ks:trackingerror} rammes 
+Når tracking fejlen defineres som i ligning \ref{eq:ks:trackingerror} rammes 
 lerduen når ligning \ref{eq:ks:trackingerrorsize} opfyldes.
 \begin{align}
-  TE &= \left | \begin{pmatrix}  Pan_{\text{pos wanted}}\\ Tilt_{\text{pos wanted}}\end{pmatrix} - \begin{pmatrix} Pan_{pos}\\ 
-  Tilt_{pos}\end{pmatrix} \right | \label{eq:ks:trackingerror}
+\begin{split}
+  TE &= \left | \begin{pmatrix}  Pan_{\text{target}}\\ Tilt_{\text{target}}\end{pmatrix} - \begin{pmatrix} Pan_{current}\\ 
+  Tilt_{current}\end{pmatrix} \right | 
   \\
   TE &\leq 1.02\degree
-  \label{eq:ks:trackingerrorsize}
+\end{split}
+\label{eq:ss}
 \end{align}
 
-Settling time defineres, som tiden der går før trackingfejlen forbliver $\leq 1.02 \degree$ 
-som skrevet i ligning \ref{eq:ks:settlingtime}.
-
-\begin{align}
-{\text{Settling time}\quad =\quad \left t\quad  \right|  }_{ TE\le 1.02 \degree }
-  \label{eq:ks:settlingtime}
-\end{align}
+Settling time defineres, som tiden der går før tracking fejlen forbliver \(\leq 1.02 \degree\).
+%som skrevet i ligning \ref{eq:ks:settlingtime}.
+%\begin{align}
+%{ { t }_{ s }\quad =\left t \right|  }_{ TE\leq 1,02 \degree }
+%\label{eq:ks:settlingtime}
+%\end{align}
 
 Der skydes mellem tidspunktet, hvor lerduen når toppunktet og til SB.
-I dette tidsrum skal Pan \& Tilt-systemet sigte præcist på lerduen og dette 
+I dette tidsrum skal PTS sigte præcist på lerduen og dette 
 stiller et krav til settling time, som skrevet i ligning \ref{eq:ks:settlingtime1}
 %Tidspunktet, hvor lerduen når sit toppunkt er altså samtidigt tid er altså det højeste settling time må være, ligning \ref{eq:ks:settlingtime1}
 
 \begin{align}
-  t_{top} &= 0,557 [s] &\text{(Toppunktet af parablen)}
+  t_{top} &= 0,557\text{ [s]} &\text{(Toppunktet af parablen)}
   \label{eq:ks:toppunktstid}
   \\
-   t_{SB} &= 1,18 [s] &\text{(Shooting boundary}
+   t_{SB} &= 1,18\text{ [s]} &\text{(Shooting boundary)}
   \label{eq:ks:toppunktstid}
   \\
-  t_{s} & \leq 0,557 [s] &\text{(Settling Time)}
+  t_{s} & \leq 0,557\text{ [s]} &\text{(Settling Time)}
   \label{eq:ks:settlingtime1}
 \end{align}
 
@@ -102,9 +107,6 @@ stiller et krav til settling time, som skrevet i ligning \ref{eq:ks:settlingtime
 
 Det eneste krav der stilles til systemet er altså et settling time krav.
 
-\todo[inline,color=pink,author=Mikkel]{Ved ikke hvor jeg skal placere nedenstående linjer :s}
-Tilt-rammen kan bevæge sig frit,
-men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 
 %Dette giver altså en øvre og en nedre grænse for pan-rammens maksimale udsving,
 %som afhænger af reguleringen
