--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -8,7 +8,26 @@ Lerduens bane beregnes vha. de i reglerne givne værdier for affyringspunkt, for
 og "target crossing point" (punktet, som lerduen skal passere).
 %Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
 Lerduens parabel blev fundet ved interpolation af disse tre punkter. Det blev antaget at luftmodstanden var neglibar.
-Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
+%Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
+%\begin{equation}
+%Pos\left( t \right) = 
+%\left( \begin{matrix} 
+%	x\left( t \right)  \\ 
+%	y\left( t \right)  \\ 
+%	z\left( t \right)  \end{matrix} \right) =
+%	 \left( \begin{matrix} 
+%	- 9,34\cdot t+5,5 \\
+%  32,851\cdot t-19,3 \\ 
+% -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+3,05\end{matrix} \right) [\text{m}]
+%\label{eq:ks:vektorparabel3d}
+%\end{equation}
+
+%Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
+Lerduens affyringshastighed og vinkel ift. xy planet kan lerduens flugt beregnes. 
+Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103 \degree\) 
+ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.}. 
+
+Lerduens flugt er givet i ligning \ref{eq:ks:vektorparabel3d} med origo som angivet på figur \ref{fig:ES}. 
 
 \begin{equation}
 Pos\left( t \right) = 
@@ -22,13 +41,7 @@ Pos\left( t \right) =
  -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+3,05\end{matrix} \right) [\text{m}]
 \label{eq:ks:vektorparabel3d}
 \end{equation}
-
-%Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
-Vha. kastaparablen kan affyringshastighed og kastets vinkel ift. xy planet beregnes: 
-Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103^{\circ}\) 
-ift. xy-planet jf. figur \ref{fig:ES} og ligning \ref{eq:ks:vektorparabel3d}. \todo[inline, author=Michael]{Måske burde henvises til ligning \ref{eq:pf:vektorparabel2} istedet}
-
-En gennemgang af beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.
+%En gennemgang af beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.
 
 Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}.
 Punktet D er "high house" (affyringsstedet).
@@ -47,6 +60,7 @@ Punktet D er "high house" (affyringsstedet).
 }
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
 \end{figure}
+
 Tilt-rammen kan bevæge sig frit,
 men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 
