--- a/Rapport/content/tb_motorparametre.tex
+++ b/Rapport/content/tb_motorparametre.tex
@@ -1,5 +1,16 @@
-\begin{tabular}{r|l|l}
-Parameter&Værdi&Enhed\\\hline
+%%%\begin{tabular}{r|l|l}
+%%%Parameter&Værdi&Enhed\\\hline
+%%%\(R_m\)&\(5,215\)&\([\Omega]\)\\
+%%%\(L_m\)&\(2,2\cdot{}10^{-3}\)&\(\text{[H]}\)\\
+%%%\(K_b\)&\(0,517\)&\(\left[ \frac{\text{V} \cdot \text{s} }{ \text{ rad } }  \right] \)\\
+%%%\(K_t\)&\(0,517\)&\(\left[ \frac{\text{N}\cdot \text{m}}{\text{A}} \right] \)\\
+%%%\(B\)&\(0,00319\)&\(\left[  \text{N} \cdot \text{m} \cdot \text{s}\right] \)\\
+%%%\(J_m\)&\(8,26\cdot10^{-4}\)&\(\left[ \text{kg}\cdot{\text{m}^2} \right]  \)\\
+%%%\item \(\left| T _f \right|\)&\(0,0571\)&\(\left[ \text{N} \cdot \text{m} \right]  \)\\
+%%%\end{tabular}
+
+\begin{tabu}{r|[1.25pt]l|l}
+Parameter&Værdi&Enhed\\\tabucline[1.25pt]{-}
 \(R_m\)&\(5,215\)&\([\Omega]\)\\
 \(L_m\)&\(2,2\cdot{}10^{-3}\)&\(\text{[H]}\)\\
 \(K_b\)&\(0,517\)&\(\left[ \frac{\text{V} \cdot \text{s} }{ \text{ rad } }  \right] \)\\
@@ -7,4 +18,4 @@ Parameter&Værdi&Enhed\\\hline
 \(B\)&\(0,00319\)&\(\left[  \text{N} \cdot \text{m} \cdot \text{s}\right] \)\\
 \(J_m\)&\(8,26\cdot10^{-4}\)&\(\left[ \text{kg}\cdot{\text{m}^2} \right]  \)\\
 %\item \(\left| T _f \right|\)&\(0,0571\)&\(\left[ \text{N} \cdot \text{m} \right]  \)\\
-\end{tabular}
+\end{tabu}
