--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -25,7 +25,7 @@ PTS' udgangsposition er at systemet peger mod "high house" hvorfra lerduen afsky
 Til nedskydning af lerduen er et tænkt masseløst gevær placeret i skæringspunktet mellem pan- og tilt-akserne.
 Geværet er monteret vinkelret på tilt-planet. 
 Lerduen skal skydes iht. reglerne for ES, dvs. inden lerduen når "shooting boundary", figur \ref{fig:ES}.
-\todo[inline, author=Michael]{En figur der viser geværet på PTS ville være meget velkommen}
+%\todo[inline, author=Michael]{En figur der viser geværet på PTS ville være meget velkommen}
 %\todo[inline, author=Michael]{Jeg har udkommenteret sætningen om 2 skud, da vi jævnfør paragraf 4.21 i regelsættet kun må affyre et skud per lerdue. Desuden er resten afsnittet omskrevet. (Det står dog gemt i kommentarerne)}
 
 Det tænkte gevær er et 12 gauge haglgevær med Skeet Choke.
