--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -72,7 +72,9 @@ inertimoment. Dette er ikke en egentlig motorparameter, men en parameter der ude
 af pan- og tilt-rammernes masser, dimensioner og vinkel.
 Desuden er det værd at bemærke, at denne model ikke tager højde for statisk friktion og Coulomb-friktion,
 fordi de ikke, som den viskøse friktion, er lineære. Ikke desto mindre antages det, at Coulomb-friktionen under
-bevægelse giver en konstant dæmpning, der kan kompenseres for med en højere forstærkning.\todo[inline]{Skal vi bruge en kilde ang. Coulomb-friktion?}
+bevægelse giver en konstant dæmpning, der kan kompenseres for med en højere forstærkning.
+%Anders: Jeg tænker ikke denne er nødtvendig..
+%\todo[inline]{Skal vi bruge en kilde ang. Coulomb-friktion?}
 
 Vi er interesserede i en overføringsfunktion for DC-motoren. Med antagelse om at \(\omega\) (vinkelhastigheden) og dens tidsafledte er 0
 Laplace-transformeres ligning \ref{eq:matVm_transient3}, og den resulterende overføringsfunktion findes
