--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -5,9 +5,15 @@ Rapporten beskriver udarbejdelsen af lerduetracking på et Pan \& Tilt system.
 Herunder lægges især vægt på hvilke valg der er truffet undervejs og hvorfor. 
 Rapportens målgruppe er andre studerende med kompetenceniveau svarende til 4. semester eller derover, på samme eller lignende uddannelser.
 Formålet med projektet er at kombinere semestrets forskellige fagligheder, og samtidig oparbejde kompetencer i problemorienteret projektarbejde.
+\bigskip
+\begin{center}
+En stor tak til \\
+\textit{Professor Esmaeil S. Nadimi} \\ 
+for vejledning, kommentar og feedback af højeste kvalitet.
+\end{center}
 
-%En stor tak til Prof. Esmaeil S. Nadimi for vejledning af højeste kvalitet.
-\todo[inline,color=pink,author=Mikkel]{Måske en tak til Esmaeil?}
+
+
 
 
 %Nedenstående er Egon Olsen citat.
