--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -69,13 +69,13 @@ med en diameter på 1,32 [m] på en afstand til centrum af cirklen på 37 [m] \c
 Spredningsvinklen er, med en antagelse om lineær spredning, givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
 \begin{split}
-  Spredning &= \tan^{-1}\left(\frac{1,32}{37}\right) \\
+  Spredning &= 2\cdot{}\tan^{-1}\left(\frac{1,32/2}{37}\right) \\
   &= 2,04 \degree
   \end{split}
   \label{eq:ks:spredning}
 \end{align}
 %Der er altså et krav om at geværet peger på lerduen med en præcision på \(\pm 1,02 \degree\).
-Når tracking fejlen defineres som i ligning \ref{eq:ks:trackingerror} rammes 
+Når tracking fejlen defineres ud fra pan- og tilt-vinklerne som i ligning \ref{eq:ks:trackingerror} rammes 
 lerduen ved afskydning af haglgeværet når ligning \ref{eq:trackingerrorkrav} opfyldes.
 \begin{align}
   TE = \left | \begin{pmatrix}  Pan_{\text{target}}\\ Tilt_{\text{target}}\end{pmatrix} - \begin{pmatrix} Pan_{current}\\ 
@@ -86,7 +86,7 @@ lerduen ved afskydning af haglgeværet når ligning \ref{eq:trackingerrorkrav} o
 \label{eq:trackingerrorkrav}
 \end{align}
 
-Settling time defineres, som tiden der går før tracking fejlen forbliver \(\leq 1.02 \degree\).
+Settling Time defineres som tiden der går før tracking fejlen forbliver \(\leq 1.02 \degree\).
 %som skrevet i ligning \ref{eq:ks:settlingtime}.
 %\begin{align}
 %{ { t }_{ s }\quad =\left t \right|  }_{ TE\leq 1,02 \degree }
@@ -117,7 +117,7 @@ stiller et krav til indsvingningstiden (Settling Time) \(t_s\), som skrevet i li
 %For en 1-radian reference giver dette altså en maksimal tracking error (SSE) på 1,78 \%.
 %\todo[inline, author=Michael]{Den virkelige sammenhænge er mere kompleks: Hvis både pan \& tilt rammen peger 1\degree ved siden af, er den samlede afvigelse vel over 1,02\degree}
 %\todo[inline, color = pink, author = Mikkel]{Hvad mening giver det at kigge på 1 radian reference og kan man virkelig kalde det SSE?}
-Det eneste krav der stilles til systemet er altså et settling time krav.
+Det eneste krav der stilles til systemet er altså et Settling Time krav.
 
 %Dette giver altså en øvre og en nedre grænse for pan-rammens maksimale udsving,
 %som afhænger af reguleringen
