højre stillet tabel.

--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -339,7 +339,7 @@ Dvs. en maks afviklingstid på 1/600 [s], da kravet på 600 [Hz] ellers ikke kun
 Intervallet mellem hver afvikling af blev målt for 60 afviklinger, og resultaterne er vist i tabel \ref{tb:ctrltasktimingtest}.
 \begin{table}[h!]
 \centering
-\begin{tabu}{c|[1.25pt]c|c|c|c}
+\begin{tabu}{l|[1.25pt]r|r|r|r}
  & Max:  & Min: & Median: & Gennemsnit:  \\ \tabucline[1.25pt]{-}
 Målt interval: & 1,672 [ms] & 1,662 [ms] & 1,667 [ms] & 1,667 [ms] \\ \hline 
 Afvigelse: & 5 [\micro s] & 5 [\micro s] & 0 [\micro s] & 0 [\micro s] \\
