--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -371,7 +371,7 @@ Måleusikkerheden er $\pm$ 4 [\micro s].}
 
 %\todo[inline, author=Michael]{Jeg har en usikkerhed på $\pm$ 4 [\micro s] på tabellen ovenover, men ved ikke hvor den skal skrives? }
 
-På trods af at afviklingstiden varierer, afvikles tasken før sin deadline - med en margin på min. 1,2 [s]. 
+På trods af at afviklingstiden varierer, afvikles tasken før sin deadline - med en margin på min. 1,2 [s]. \todo[inline,author=Anders]{Enhed korrekt?} 
 Variationen i afviklingstiden skyldes primært koordinattransformationen, der benytter \textbf{math.h} librariet. 
 
 \todo[inline, author=Michael]{Skal vi bruge plads på at teste interfacet også? }
