--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -3,8 +3,8 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
-I denne del af rapporten beskrives sammenhængen i hvilken Pan \& Tilt Systemet (PTS) 
-ønskes brugt. Applikationen analyseres og krav til systemet fastlægges. Sidst 
+I denne del af rapporten beskrives i hvilken sammenhæng hvordan Pan \& Tilt Systemet (PTS) 
+ønskes brugt. Applikationen analyseres og kravene til systemet fastlægges. Sidst 
 gives et overblik over det samlede projekt samt opdelingen i opgaver.
 
 \input{./content/problemformulering}
