--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,9 +1,9 @@
 \section*{Indledning}
 Trackingsystemer spiller en stadig større rolle i vores hverdag og ses ofte i gadebilledet i form 
 af f.eks. overvågningskameraer.
-Fælles for mange af sådanne systemer er, at de er styret af pan \& tilt systemer. 
+Fælles for mange af sådanne systemer er, at de er styret af et pan \& tilt system. 
 I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues bevægelse i 
-luften. For at udvikle et sådant system skal en passende regulator designes og denne skal implementeres
+luften. For at udvikle et sådant system skal en passende regulator designes og implementeres
 på en mikrocontroller. 
 Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, som er vedlagt 
