--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -284,5 +284,5 @@ undervisningen i reguleringsteknik.
 For at integratoren hurtigst muligt kan levere den nødvendige PWM-duty cycle til minimering af fejlsignalet,
 vælges det desuden at implementere et "bias", der tager højde for dødbåndet.
 Enhver PWM-duty cycle til Pan med en størrelse på under 10 \% og til Tilt under 12 \%, og forskellig fra 0, bliver sat til hhv. 10 \% og 12 \%,
-så Pan \& Tilt-systemet bevæger sig. For at undgå vedblivende svingninger vælges det desuden at nulstille
+så PTS bevæger sig. For at undgå vedblivende svingninger vælges det desuden at nulstille
 PWM-duty cycles med en størrelse på under 1 \%.\todo[inline,author=Mikael]{Hvorfor 1 \%???}
