--- a/Rapport/content/problemequation.tex
+++ b/Rapport/content/problemequation.tex
@@ -3,7 +3,7 @@
 
 Jævnfør reglerne for ES, skal lerduen passere target crossing point (TCS) som er 
 placeret i 4,57 [m] over origo med en fejlmargin på \(\pm\)0,45 [m] for passagen. 
-Lerduen skal flyve 50 [m] - 52 [m]. "High House" er placeret 20,11 [m] fra TCS, i en 
+Lerduen skal flyve 50 [m] - 52 [m]. "High house" er placeret 20,11 [m] fra TCS, i en 
 højde af 3,05 [m]. 
 
 \subsection{Parabel i 2 dimensioner}
