--- a/Rapport/content/abstract.tex
+++ b/Rapport/content/abstract.tex
@@ -3,7 +3,7 @@
 \section*{Abstract}
 This paper describes the development of a Pan \& Tilt System for the tracking of a moving
 target. The system is developed for tracking the parabolic movement of
-a clay target of an English Skeet competition.
+a clay target in an English Skeet competition.
 
 A mathematical model of the physical dynamics of the Pan \& Tilt is
 developed and used as basis for the controller design.
