--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -1,13 +1,12 @@
 \section{Kravspecifikation}
 \label{sec:kravspecifikation}
 Kravene til systemet findes vha. reglerne for English Skeet \citep{ES_regler},
-samt det udleverede Pan \& Tilt-systems fysiske begrænsninger.
+samt det udleverede systems fysiske begrænsninger.
 
-
-Lerduens bane beregnes vha. de i reglerne givne værdier for affyringspunkt, forventet nedslagspunkt
-og "target crossing point" (punktet, som lerduen skal passere).
+Lerduens bane beregnes vha. de i reglerne givne værdier for affyringspunkt (D), forventet nedslagspunkt (G)
+og "target crossing point" (TCS).
 %Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
-Lerduens parabel blev fundet ved interpolation af disse tre punkter. Det blev antaget at luftmodstanden var neglibar.
+Lerduens parabel findes ved interpolation af disse tre punkter. Det blev antaget at luftmodstanden var neglibar.
 %Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
 %\begin{equation}
 %Pos\left( t \right) = 
@@ -24,8 +23,8 @@ Lerduens parabel blev fundet ved interpolation af disse tre punkter. Det blev an
 
 %Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
 Lerduens affyringshastighed og vinkel ift. xy planet kan lerduens flugt beregnes. 
-Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103 \degree\) 
-ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.}. 
+Lerduen affyres med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103 \degree\) 
+ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.}. 
 
 Lerduens flugt er givet i ligning \ref{eq:ks:vektorparabel3d} med origo som angivet på figur \ref{fig:ES}. 
 
@@ -44,8 +43,8 @@ Pos\left( t \right) =
 %En gennemgang af beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.
 
 Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}.
-Punktet D er "high house" (affyringsstedet).
-"Shooting boundary" (SB) og nedslagspunktet G er hhv. 40,3 [m] og 52 [m] fra "high house". PTS er placeret i punktet B.\\
+Punktet D er "high house".
+Punktet SB og punktet G er hhv. 40,3 [m] og 52 [m] fra "high house". \\
 \begin{figure}[h!]
 \centering
 \subfloat[Lerduens højde som funktion af afstanden til D.\label{fig:HH2D_para}]{%
@@ -60,7 +59,7 @@ Punktet D er "high house" (affyringsstedet).
 }
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
 \end{figure}
-
+\todo[inline,author=Anders]{Vi bruger ikke figur \ref{fig:HH2D_para}}
 Tilt-rammen kan bevæge sig frit,
 men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 
@@ -93,16 +92,16 @@ Settling Time defineres som tiden der går før tracking fejlen forbliver \(\leq
 %\label{eq:ks:settlingtime}
 %\end{align}
 
-Der skydes mellem tidspunktet, hvor lerduen når toppunktet og hvor den når SB.
+Der affyres mellem det tidspunkt lerduen når toppunktet og SB.
 I dette tidsrum skal PTS sigte præcist på lerduen under opfyldelse af ligning \ref{eq:trackingerrorkrav} og dette 
-stiller et krav til indsvingningstiden (Settling Time) \(t_s\), som skrevet i ligning \ref{eq:ks:settlingtime1}
+stiller krav til Settling Time, \(t_s\), som skrevet i ligning \ref{eq:ks:settlingtime1}.
 %Tidspunktet, hvor lerduen når sit toppunkt er altså samtidigt tid er altså det højeste settling time må være, ligning \ref{eq:ks:settlingtime1}
 
 \begin{align}
   t_{top} &= 0,557\text{ [s]} &\text{(Toppunktet af parablen)}
   \label{eq:ks:toppunktstid}
   \\
-   t_{SB} &= 1,18\text{ [s]} &\text{(Shooting Boundary)}
+   t_{SB} &= 1,18\text{ [s]} &\text{(SB)}
   \label{eq:ks:toppunktstid}
   \\
   t_{s} & \leq 0,557\text{ [s]} &\text{(Krav til Settling Time)}
